styling and fixing issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-.body{
-    font-family: "Poppins", serif;
-    font-weight: auto;
-    font-style: normal;
-  }
+body {
+  font-family: "Roboto Condensed", sans-serif;
+}
